Configure eslintrc.js

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
+    "lint": "eslint src tests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
