--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^27.2.5"
+    "jest": "^27.2.5",
+    "prettier-plugin-organize-imports": "^2.3.4"
   }
 }
